# nyx

./: .clippy.toml  .dockerignore  .firebaserc  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENT.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  PULL_REQUEST_TEMPLATE.md  Pipfile  README.md  VALIDATION.md  build.rs  check_der.rs  de438.bsp  de438.exb  de438.fxb  de438s.fxb  estimate_plots.kst  estimate_plots_srif.kst  firebase.json  od_plotter.py  plan.md  pyproject.toml  rustfmt.toml  test.py  test_position_od.py
.cargo/: config.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
conductor/: product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md
data/: .gitignore  ci_almanac.dhall  earth_latest_high_prec.bpc  iss-example.toml  md-scenario.toml  pck08.pca  (+5 more)
examples/visualize-trajectory/: .gitignore  Cargo.toml
examples/visualize-trajectory/src/: main.rs  mod.rs  scenario.rs
examples/visualize-trajectory/src/gui/: app.rs  controls.rs  mod.rs
nyx-core/: Cargo.toml
nyx-core/examples/01_orbit_prop/: README.md  main.rs
nyx-core/examples/02_jwst_covar_monte_carlo/: README.md  main.rs
nyx-core/examples/03_geo_analysis/: README.md  drift.rs  plot_3d_traj.py  raise.rs  raise_optim.rs  stationkeeping.rs
nyx-core/examples/04_lro_od/: README.md  dsn-network.yaml  lro-specific.pca  main.rs  plot_msr.py
nyx-core/examples/05_cislunar_spacecraft_link_od/: main.rs
nyx-core/examples/06_lunar_orbit_determination/: main.rs
nyx-core/src/: errors.rs  utils.rs
nyx-core/src/cosmic/: bplane.rs  eclipse.rs  nyx_python.rs  spacecraft.rs
nyx-core/src/dynamics/: albedo.rs  deltavctrl.rs  drag.rs  gravity_field.rs  mod.rs  orbital.rs  solarpressure.rs  solid_tides.rs  spacecraft.rs
nyx-core/src/dynamics/guidance/: kluever.rs  mnvr.rs  mod.rs  replay.rs  ruggiero.rs
nyx-core/src/dynamics/sequence/: config.rs  mod.rs  python.rs
nyx-core/src/io/: gravity.rs  mod.rs  python.rs  watermark.rs
nyx-core/src/mc/: dispersion.rs  generator.rs  helpers.rs  mod.rs  montecarlo.rs  multivariate.rs  python.rs  results.rs
nyx-core/src/md/: mod.rs  objective.rs  param.rs
nyx-core/src/md/opti/: minimize_lm.rs  mod.rs  raphson_finite_diff.rs  raphson_hyperdual.rs  solution.rs  target_variable.rs  targeter.rs
nyx-core/src/md/opti/multipleshooting/: altitude_heuristic.rs  ctrlnodes.rs  equidistant_heuristic.rs  mod.rs  multishoot.rs
nyx-core/src/md/trajectory/: interpolatable.rs  mod.rs  sc_traj.rs  traj.rs  traj_it.rs
nyx-core/src/od/: mod.rs  snc.rs
nyx-core/src/od/blse/: mod.rs  solution.rs
nyx-core/src/od/estimate/: kfestimate.rs  mod.rs  residual.rs  sc_uncertainty.rs
nyx-core/src/od/ground_station/: builtin.rs  mod.rs  python.rs  trk_device.rs
nyx-core/src/od/groundpnt/: ground_dynamics.rs  mod.rs  sensitivity.rs  solution.rs  trk_device.rs
nyx-core/src/od/interlink/: mod.rs  sensitivity.rs  trk_device.rs
nyx-core/src/od/kalman/: filtering.rs  initializers.rs  mod.rs
nyx-core/src/od/msr/: measurement.rs  mod.rs  python.rs  sensitivity.rs  types.rs
nyx-core/src/od/msr/trackingdata/: io_ccsds_tdm.rs  io_parquet.rs  mod.rs  python.rs
nyx-core/src/od/noise/: gauss_markov.rs  link_specific.rs  mod.rs  white.rs
nyx-core/src/od/position/: mod.rs  python.rs  sensitivity.rs  trk_device.rs
nyx-core/src/od/process/: initializers.rs  mod.rs  rejectcrit.rs
nyx-core/src/od/process/solution/: display.rs  export.rs  filter_data.rs  import.rs  mod.rs  smooth.rs  stats.rs
nyx-core/src/od/simulator/: arc.rs  mod.rs  scheduler.rs  trackdata.rs  trkconfig.rs
nyx-core/src/propagators/: error_ctrl.rs  event.rs  instance.rs  mod.rs  options.rs  propagator.rs  python.rs
nyx-core/src/propagators/rk_methods/: mod.rs
nyx-core/src/python/: errors.rs
nyx-core/src/tools/lambert/: godding.rs  izzo.rs
nyx-core/tests/: freq_roundtrip.rs  lib.rs  tdm_ramp.rs
nyx-core/tests/GMAT_scripts/harmonics/: rk89_21x21jgm3.script  rk89_j2jgm3.script
nyx-core/tests/GMAT_scripts/prop/: finite_burn_no_depl.script  report-finite_burn_no_depl.txt  srp.script
nyx-core/tests/GMAT_scripts/propagators/: dormand45_fixed_step.script  earth_moon.script  earth_moon_jupiter_sun.script  rk89_fixed_step.script
nyx-core/tests/GMAT_scripts/state/: circ_inc.script  elliptical.script
nyx-core/tests/GMAT_scripts/targeting/: EarthGA.script  basic_aop.script  basic_aop_peri.script  basic_ecc.script  basic_raan_peri.script  basic_sma.script  basic_sma_ecc_peri.script
nyx-core/tests/cosmic/: bplane.rs  eclipse.rs  mod.rs
nyx-core/tests/mission_design/: force_models.rs  orbitaldyn.rs  sequence.rs
nyx-core/tests/mission_design/multishoot/: mod.rs
nyx-core/tests/mission_design/targeter/: finite_burns.rs  multi_oe.rs
nyx-core/tests/monte_carlo/: framework.rs  manual_montecarlo.rs  mod.rs
nyx-core/tests/orbit_determination/: blse.rs  gps_position.rs  groundpnt.rs  interlink.rs  measurements.rs  mod.rs  multi_body.rs  predict_validation.rs  rejection.rs  robust.rs  simulator.rs  spacecraft.rs  trackingarc.rs  two_body.rs
nyx-core/tests/propagation/: events.rs  propagators.rs  stm.rs  stopcond.rs  trajectory.rs
nyx-core/tests/propulsion/: closedloop_multi_oe_ruggiero.rs  kluever.rs  schedule.rs
nyx-core/tests/utils/: plot_od_cr_cd.py  plot_od_rslt.py
nyx-py/: .gitignore  Cargo.toml  README.md  generate_stubs.py  pyproject.toml
nyx-py/nyx_space/: __init__.py  __init__.pyi  mission_design.py  mission_design.pyi  monte_carlo.py  monte_carlo.pyi  orbit_determination.py  orbit_determination.pyi  time.pyi
nyx-py/nyx_space/aether/proto/: astrodynamics_pb2.py
nyx-py/nyx_space/anise/: __init__.py  analysis.py  astro.py  constants.py  instrument.py  rotation.py  time.py  utils.py
nyx-py/nyx_space/plots/: __init__.py  md.py  od.py  plot_od_orbital_elements.py  plot_od_rslt.py  plot_orbital_elements.py  plot_pnt_rslts.py
nyx-py/src/: constants.rs  lib.rs  py_md.rs  py_od.rs  utils.rs
nyx-py/tests/: requirements.txt  test_mission_design.py  test_orbit_determination.py  test_spacecraft.py
(+572 files in other folders)
