[package]
name = "nyx-space"
build = "build.rs"
version = "2.2.0-alpha"
edition = "2021"
authors = ["Christopher Rabotin <christopher.rabotin@gmail.com>"]
description = "A high-fidelity space mission toolkit, with orbit propagation, estimation and some systems engineering"
homepage = "https://nyxspace.com"
documentation = "https://docs.rs/nyx-space/"
repository = "https://github.com/nyx-space/nyx"
keywords = ["space", "mission", "design", "orbit", "estimation"]
categories = ["science", "simulation", "aerospace", "science::robotics"]
readme = "README.md"
license = "AGPL-3.0-or-later"
exclude = [
    ".cargo/",
    ".github/",
    ".venv/",
    ".vscode/",
    "data/",
    "*.parquet",
    "*.tdm",
    "firebase.json",
    "rustfmt.toml",
    "*.script",
    "*.png",
    "*.pca",
]

[badges]
maintenance = { status = "actively-developed" }
github = { repository = "nyx-space/nyx", branch = "master" }

[dependencies]
nalgebra = "0.33"
log = "0.4"
hifitime = "4.0.0"
anise = "0.6.0"
flate2 = { version = "1.0", features = [
    "rust_backend",
], default-features = false }
serde = "1.0"
serde_derive = "1.0"
hyperdual = "1.3.0"
rand = "0.9"
rand_distr = "0.5"
regex = "1.5"
rayon = "1.6"
approx = "0.5"
rand_pcg = "0.9"
indicatif = { version = "0.18", features = ["rayon"], default-features = false }
rstats = "2.0.1"
parquet = { version = "55.0.0", default-features = false, features = [
    "arrow",
    "zstd",
] }
arrow = "55.0.0"
shadow-rs = { version = "1.0.1", default-features = false }
serde_yml = "0.0.12"
whoami = "1.3.0"
either = { version = "1.8.1", features = ["serde"] }
num = "0.4.0"
enum-iterator = "2.0.0"
typed-builder = "0.21.0"
snafu = { version = "0.8.3", features = ["backtrace"] }
serde_dhall = "0.12"
indexmap = { version = "2.6.0", features = ["serde"] }
statrs = "0.18.0"


[dev-dependencies]
polars = { version = "0.49.0", features = ["parquet"] }
rstest = "0.26.1"
pretty_env_logger = "0.5"
toml = "0.9.0"

[build-dependencies]
shadow-rs = "1.0.1"

# Uncomment to speed up local builds
# [profile.dev.package."*"]
# opt-level = 3

[target.x86_64-unknown-linux-gnu]
# For flamegraph -- https://github.com/flamegraph-rs/flamegraph
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
name = "01_orbit_prop"
path = "examples/01_orbit_prop/main.rs"
doc-scrape-examples = true

[[example]]
name = "02_jwst"
path = "examples/02_jwst_covar_monte_carlo/main.rs"
doc-scrape-examples = true

[[example]]
name = "03_geo_drift"
path = "examples/03_geo_analysis/drift.rs"
doc-scrape-examples = true

[[example]]
name = "03_geo_raise"
path = "examples/03_geo_analysis/raise.rs"
doc-scrape-examples = true

[[example]]
name = "03_geo_sk"
path = "examples/03_geo_analysis/stationkeeping.rs"
doc-scrape-examples = true

[[example]]
name = "04_lro_od"
path = "examples/04_lro_od/main.rs"
doc-scrape-examples = true
