[workspace]
resolver = "2"
members = ["nyx-core", "nyx-py"]

[workspace.package]
version = "2.4.2"
edition = "2024"
authors = ["Christopher Rabotin <christopher.rabotin@gmail.com>"]
description = "Flight-proven, blazing fast astrodynamics from preliminary design to operations"
homepage = "https://nyxspace.com"
documentation = "https://docs.rs/nyx-space/"
repository = "https://github.com/nyx-space/nyx"
keywords = ["space", "mission", "design", "orbit", "estimation"]
categories = ["science", "simulation", "aerospace", "science::robotics"]
readme = "README.md"
license = "AGPL-3.0-or-later"
exclude = [
    ".cargo/",
    ".github/",
    ".venv/",
    ".vscode/",
    "data/",
    "*.parquet",
    "*.tdm",
    "firebase.json",
    "rustfmt.toml",
    "*.script",
    "*.png",
    "*.pca",
]

[workspace.dependencies]
hifitime = "4.3.0"
anise = { version = "0.10.2", features = ["analysis"] }
log = { version = "0.4", features = ["max_level_info"] }
rayon = "1.6"
pyo3 = { version = "0.28", features = ["multiple-pymethods"] }
numpy = "0.29"
snafu = { version = "0.9.0", features = ["backtrace"] }

nyx-space = { path = "nyx-core" }

[profile.release]
codegen-units = 1
lto = "thin"

# Uncomment to speed up local builds
# [profile.dev.package."*"]
# opt-level = 3

