[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "nyx_space"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]
dependencies = ["pandas~=2.0.0", "plotly~=5.13.0", "pytest~=7.2.0", "pyarrow~=11.0.0", "scipy~=1.10.1", "python-slugify~=8.0.1"]

[tool.yapf]
based_on_style = "google"
spaces_before_comment = 4
column_limit = 100

[tool.maturin]
python-source = "python"
module-name = "nyx_space._nyx_space"

[tool.ruff]
line-length = 100