[build-system]
requires = ["maturin>=1.1,<1.2"]
build-backend = "maturin"

[project]
name = "nyx_space"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]
dependencies = ["pandas~=2.1.0", "plotly~=5.16.0", "pytest~=7.2.0", "pyarrow~=13.0.0", "scipy~=1.11.2", "python-slugify~=8.0.1"]

[tool.yapf]
based_on_style = "google"
spaces_before_comment = 4
column_limit = 100

[tool.maturin]
python-source = "python"
module-name = "nyx_space._nyx_space"

[tool.ruff]
line-length = 100