[build-system]
requires = ["maturin>=1.7,<2.0", "numpy>=1.16.0"]
build-backend = "maturin"

[project]
name = "nyx_space"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"
dynamic = ["version", "urls", "description", "authors", "license", "description_content_type", "summary"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "nyx_space._nyx"

